# Nexostrap

./: CMakeLists.txt
.github/workflows/: build.yml
Nexo/: injector.hpp  ipc_client.hpp  main.cpp  memory.hpp  offsets.hpp  ui.cpp  ui.hpp
NexoCore/: dllmain.cpp
